# hasktorch

./: .ghcide-nix-shell-wrapper.sh  .gitignore  .gitmodules  .mailmap  .stylish-haskell.yaml  AUTHORS  DEVELOPERS.md  Dockerfile  HLint.hs  HaskTorch.cabal  LICENSE  Makefile  NOTICE  Pipfile  README.md  TODO.md  build-vendor.nix  build.nix  cabal.project  cabal.project.freeze  cabal.project.freeze.ghc810  cabal.project.local-cpu  cabal.project.local-example  cabal.project.local-gpu  circle.yml  codegen-and-rebuild.sh  default.nix  ffi-experimental.cabal  flake.nix  fourmolu.yaml  hasktorch.cabal  hasktorch.cabal.bak  hie.yaml  make_cabal_local.sh  nixpkgs.json  out  parse_ffi.py  plot.html  pyproject.toml  release.nix  (+12 more)
classes/: hasktorch-classes.cabal  hasktorch-core-classes-c.cabal
classes-c/: hasktorch-core-classes-c.cabal
codegen/: CodeGenRender.hs  Main.hs  ParseDerivatives.hs  ParseFunctionSig.hs  ParseNativeFunctions.hs  README.md  codegen.cabal  default.nix  hasktorch-codegen.cabal  package.yaml  refresh.sh  run-ghci.sh  shell.nix  torch-codegen.cabal
codegen/exe/: CLIOptions.hs  FileMappings.hs  Main.hs
codegen/src/: CodeGenParse.hs  CodeGenRender.hs  CodeGenTypes.hs  ConditionalCases.hs  Main.hs  ParseClass.hs  ParseDeclarations.hs  ParseDerivatives.hs  ParseFunctionSig.hs  ParseHeadersForNN.hs  ParseNN.hs  ParseNativeFunctions.hs  ParseTuples.hs  RenderClass.hs  RenderCommon.hs  RenderConcrete.hs  RenderDeclarations.hs  RenderGeneric.hs  RenderManaged.hs  RenderNN.hs  RenderNativeFunctions.hs  RenderPure.hs  RenderShared.hs  RenderTensor.hs  RenderTuples.hs  SpecDB.hs  SpecialCases.hs
codegen/test/: Declarations.yaml  Spec.hs  doctests.hs
codegen/tests/: CodeGenParseSpec.hs
core/: HLint.hs  README.md  TODO.md  hasktorch-core.cabal  hasktorch-core.dhall  package.yaml  package.yaml.bk  torch-core.cabal
core-long/: hasktorch-core-long.cabal
core/exe/: Main.hs
core/src/: .gitignore  LogAdd.hs  MemoryTest.hs  Random.hs  StaticTensorDouble.hs  StorageTypes.hs  THByteBlas.hs  THByteStorageCopy.hs  THByteTensorCopy.hs  THByteTensorLapack.hs  THByteTensorMath.hs  THByteTensorRandom.hs  THByteVector.hs  THDiskFile.hs  THDoubleBlas.hs  THDoubleStorage.hs  THDoubleStorageCopy.hs  THDoubleTensor.hs  THDoubleTensorConv.hs  THDoubleTensorCopy.hs  THDoubleTensorLapack.hs  THDoubleTensorMath.hs  THDoubleTensorRandom.hs  THFile.hs  THFloatStorageCopy.hs  THFloatTensor.hs  THFloatTensorCopy.hs  THFloatTensorMath.hs  THFloatTensorRandom.hs  THFloatVector.hs  THHalfBlas.hs  THHalfLapack.hs  THHalfStorage.hs  THHalfStorageCopy.hs  THHalfTensorConv.hs  THHalfTensorMath.hs  THHalfTensorRandom.hs  THIntBlas.hs  THIntLapack.hs  THIntTensorConv.hs  (+29 more)
core/tests/: Extras.hs  GarbageCollectionSpec.hs  MemorySpec.hs  Orphans.hs  RawLapackSVDSpec.hs  Spec.hs  TensorRawSpec.hs
core/tests.bk/: GarbageCollectionSpec.hs  MemorySpec.hs  RawLapackSVDSpec.hs
dimensions/: hasktorch-core-dims.cabal  hasktorch-dimensions.cabal
examples/: .ghci  README.md  default.nix  examples.cabal  hasktorch-examples.cabal  hasktorch-examples.dhall  package.yaml  shell.nix
examples/ad/: AD.hs
examples/alexNet/: AlexNet.hs  Main.hs  README.md  extractParameters.cpp  setup.sh  trace-model.py
examples/autoencoder/: ae.hs
examples/autograd/: Main.hs  README.md
examples/backprop/: Backprop.hs
examples/backprop-regression/: BackpropRegression.hs  README.md
examples/bayesian-regression/: BayesianRegression.hs
examples/cnn/: Main.hs
examples/convolutions/: Conv1d.hs  Conv2d.hs  DataLoader.hs  LeNet.hs  LeNet.py  Main.hs  MaxPooling.hs  ReLU.hs  Train.hs  Utils.hs
examples/covid/: CovidData.hs  CovidUtil.hs  Main.hs  README.md  TimeSeriesModel.hs  download-covid-csv.sh
examples/csv-test/: Main.hs
examples/dataloader-cifar10/: Main.hs
examples/datasets/: .gitignore  README.md  download-mnist.sh
examples/distill/: Dataset.hs  Distill.hs  Main.hs  Model.hs  Plot.hs  Prune.hs  README.md  Regularization.hs
examples/download-mnist/: DownloadMNIST.hs
examples/elman/: Elman.hs  ElmanLayer.hs  GRU.hs  GRULayer.hs  LSTM.hs  LSTMLayer.hs  LinearLayer.hs  MLP.hs  Main.hs  Parameters.hs  Recurrent.hs  RecurrentLayer.hs  Utils.hs
examples/experimental/: README.md
examples/ff-typed/: FeedForwardTyped.hs
examples/ff-untyped/: FeedForwardUntyped.hs
examples/gaussian-process/: Main.hs  README.md
examples/gaussian_process/: Main.hs
examples/gd-field/: Main.hs  README.md
examples/gp/: Main.hs
examples/gradient-descent/: GradientDescent.hs  README.md
examples/image-processing/: Main.hs  README.md
examples/initializers/: InitializerSpec.hs  Initializers.hs  Main.hs  README.md  pytorch-test.py
examples/iris-classification/: Main.hs  README.md  setup_data.sh
examples/kmeans/: Main.hs  Plot.hs
examples/lasso/: Lasso.hs
examples/lenet/: Main.hs
examples/lenet-cifar10/: Backprop.hs  Criterion.hs  DataLoading.hs  Dense3.hs  Dense3CIFAR.hs  Initialization.hs  Initialization.py  LeNet.hs  LoadTest.hs  Main.hs  Main.hs.bk  Manual.hs  TrainFour.hs  TrainOneBatch.hs  Utils.hs  requirements.txt
examples/library-example/: CHANGELOG.md  LICENSE  README.md  default.nix  library-example.cabal
experimental/: default.nix  experimental.cabal  shell.nix
ffi/: CppTest.hs  NN.hs  NativeFunctions.hs  ffi.cabal  libtorch-ffi.cabal
ghc-not-export/: ghc-not-export.cabal
hasktorch/: .hie-wrapper.sh  .tintin.yml  CHANGELOG.md  README.md  Setup.hs  default.nix  hasktorch-core.cabal  hasktorch.cabal  hasktorch.dhall  shell.nix
indef/: default.nix  hasktorch-indef-gpu.cabal  hasktorch-indef.cabal  hasktorch-indef.dhall
interface/: hasktorch-interface.cabal  torch-interface.cabal
libtorch-ffi/: CHANGELOG.md  README.md  Setup.hs  default.nix  libtorch-ffi.cabal  shell.nix
libtorch-ffi-helper/: libtorch-ffi-helper.cabal
libtorch-test/: CMakeLists.txt  Makefile  cpptest.cpp  libtorch_lib  mkl_lib  set-dyld-path.sh
nn/: hasktorch-nn.cabal
raw/: README.md  hasktorch-raw.cabal  torch-raw.cabal
tensor/: torch-tensor.cabal
tests/: hasktorch-tests.cabal  torch-tests.cabal
(+2711 files in other folders)
