name:                HaskTorch
version:             0.1.0.0
synopsis:            Bindings to torch core library
description:         Bindings to torch core library
homepage:            https://github.com/austinvhuang/HaskTorch#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     THTypes
                     , THByteTensor
                     , THDoubleTensor
                     , THFloatTensor
                     , THHalfTensor
                     , THIntTensor
                     , THLongTensor
                     , THShortTensor
  hs-source-dirs:      src, th-bindings
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.4.4
  default-language:    Haskell2010

Test-Suite test-torch
  default-language:    Haskell2010
  other-modules:       THFloatTensor, THTypes
  hs-source-dirs:      src, th-bindings
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >= 4.7 && < 5
                     , HaskTorch
                     , hspec >= 2.4.4

executable codegen
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             CodeGen.hs
  other-modules:       CodeParse
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , text >= 1.2.2.2

source-repository head
  type:     git
  location: https://github.com/austinvhuang/HaskTorch

  