name:                ffi-experimental
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ffi-experimental#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2018 Austin Huang
category:            Codegen
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ffi-experimental
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , inline-c-cpp == 0.3.0.1
                     , megaparsec == 7.0.4
                     , optparse-applicative == 0.14.3.0
                     , show-prettyprint == 0.2.2
                     , yaml == 0.11.0.0
  extra-libraries:     stdc++
executable cpp-test
  hs-source-dirs:      src
  main-is:             CppTest.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , inline-c-cpp == 0.3.0.1
                     , optparse-applicative == 0.14.3.0
  extra-libraries:     stdc++

