name:                hasktorch
version:             0.1.0.0
synopsis:            Torch for tensors and dynamic neural networks in Haskell
description:         Torch for tensors and dynamic neural networks in Haskell
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
maintainer:          
copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     THTypes
                     , CodeGenTypes
                     , THByteTensor
                     , THDoubleTensor
                     , THFloatTensor
                     -- , THHalfTensor
                     , THIntTensor
                     , THLongTensor
                     , THShortTensor
  hs-source-dirs:      src, th-bindings
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.4.4
                     , text >= 1.2.2.2
  default-language:    Haskell2010

Test-Suite test-torch
  default-language:    Haskell2010
  other-modules:       THFloatTensor, THTypes
  hs-source-dirs:      src, th-bindings
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , hspec >= 2.4.4

executable codegen
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             CodeGenRender.hs
  other-modules:       CodeGenParse, CodeGenTypes
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , text >= 1.2.2.2

executable specdb
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             SpecDB.hs
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , directory >= 1.3
                     , pretty-show >= 1.6.13
                     , sqlite-simple >= 0.4.14.0
                     , text >= 1.2.2.2

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch

  