[tool.poetry]
name = "hasktorch"
version = "0.1.0"
description = ""
authors = ["Torsten Scholak <torsten.scholak@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.8.2"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
