name:           hasktorch-core-classes-c
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.24

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , hasktorch-raw-types
  exposed-modules:
      Torch.Class.C.Internal

    -- not done
    -- , Torch.Class.C.Blas
    -- , Torch.Class.C.Lapack
    -- , Torch.Class.C.Vector
    -- done
    , Torch.Class.C.Storage
    , Torch.Class.C.Storage.Copy
    , Torch.Class.C.Tensor
    , Torch.Class.C.Tensor.Copy
    , Torch.Class.C.Tensor.Conv
    , Torch.Class.C.Tensor.Lapack
    , Torch.Class.C.Tensor.Math
    , Torch.Class.C.Tensor.Random

