name:           hasktorch-classes
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.24

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , hasktorch-types-th
    , hasktorch-dimensions
    , safe-exceptions
  exposed-modules:
      Torch.Class.Internal

    -- not done
    -- , Torch.Class.Blas
    -- , Torch.Class.Lapack
    -- , Torch.Class.Vector

    -- done
    , Torch.Class.Storage
    , Torch.Class.Storage.Copy
    , Torch.Class.Tensor
    , Torch.Class.IsTensor
    , Torch.Class.Tensor.Copy
    , Torch.Class.Tensor.Conv
    , Torch.Class.Tensor.Lapack
    , Torch.Class.Tensor.Math
    , Torch.Class.Tensor.Random
    , Torch.Class.Tensor.Static

