name:           hasktorch-classes
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Hasktorch dev team <Austin Huang, Sam Stites>
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.24

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

flag cuda
  Description: build with THC support
  Default: True

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
    , FunctionalDependencies
    , AllowAmbiguousTypes
    , LambdaCase
    , DataKinds
    , KindSignatures
  build-depends:
      base >=4.7 && <5
    , hasktorch-types-th
    , hasktorch-dimensions
    , safe-exceptions
    , transformers >= 0.5
    , mtl
    , singletons >=2.2

  if flag(cuda)
    build-depends:
      hasktorch-types-thc
    cpp-options: -DCUDA

  exposed-modules:
    -- FIXME: not sure where to go with commented-out classes, they are TH-only but there are some THC-only things as well
    -- , Torch.Class.Blas
    -- , Torch.Class.Lapack
    -- , Torch.Class.Tensor.Conv
    -- , Torch.Class.Vector

      Torch.Class.Types

    , Torch.Class.Storage
    , Torch.Class.Storage.Copy

    -- , Torch.Class.NN

    , Torch.Class.Tensor
    , Torch.Class.Tensor.Static
    , Torch.Class.Tensor.Copy
    , Torch.Class.Tensor.Copy.Static
    , Torch.Class.Tensor.Index
    , Torch.Class.Tensor.Index.Static
    , Torch.Class.Tensor.Masked
    , Torch.Class.Tensor.Masked.Static

    , Torch.Class.Tensor.Math
    , Torch.Class.Tensor.Math.Static
    -- , Torch.Class.Tensor.Math.Blas

    , Torch.Class.Tensor.Math.Compare
    , Torch.Class.Tensor.Math.Compare.Static
    , Torch.Class.Tensor.Math.CompareT
    , Torch.Class.Tensor.Math.CompareT.Static

    , Torch.Class.Tensor.Math.Pairwise
    , Torch.Class.Tensor.Math.Pairwise.Static
    -- , Torch.Class.Tensor.Math.Lapack
    , Torch.Class.Tensor.Math.Pointwise
    , Torch.Class.Tensor.Math.Pointwise.Static
    -- , Torch.Class.Tensor.Math.Random
    , Torch.Class.Tensor.Math.Reduce
    , Torch.Class.Tensor.Math.Reduce.Static
    , Torch.Class.Tensor.Math.Scan
    , Torch.Class.Tensor.Math.Scan.Static
    , Torch.Class.Tensor.Mode
    , Torch.Class.Tensor.Mode.Static
    , Torch.Class.Tensor.ScatterGather
    , Torch.Class.Tensor.ScatterGather.Static
    , Torch.Class.Tensor.Sort
    , Torch.Class.Tensor.Sort.Static
    , Torch.Class.Tensor.TopK
    , Torch.Class.Tensor.TopK.Static

