name:                codegen
version:             0.1.0.0
synopsis:            parse torch yaml spec files, generate code
-- description:
homepage:            https://github.com/githubuser/ffi-experimental#readme
license:             BSD3
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2018 Austin Huang
category:            Codegen
build-type:          Simple
cabal-version:       >=1.10

executable codegen
  hs-source-dirs:      .
  main-is:             Main.hs
  other-modules:       ParseNativeFunctions, ParseDerivatives, ParseFunctionSig
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.4.2.0
                     , inline-c-cpp >= 0.3.0.1
                     , megaparsec >= 7.0.4
                     , optparse-applicative >= 0.14.3.0
                     , show-prettyprint >= 0.2.2
                     , yaml >= 0.11.0.0
  extra-libraries:     stdc++

test-suite doctests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         doctests.hs
  ghc-options:     -Wall -threaded
  build-depends:   base,
                   doctest
