name:                codegen
version:             2.0.0.0
synopsis:            parse torch yaml spec files, generate code
-- description:
homepage:            https://github.com/hasktorch/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2018 Austin Huang
category:            Codegen
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  test/Declarations.yaml

library
  exposed-modules:
    ParseDeclarations
    ParseFunctionSig
    ParseTuples
    ParseClass
    RenderDeclarations
    RenderCommon
    RenderTuples
    RenderClass
    RenderPure
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , aeson >= 1.4.2.0
    , inline-c-cpp >= 0.5.0.2
    , megaparsec >= 7.0.4
--    , show-prettyprint >= 0.2.2
    , yaml >= 0.11.0.0
    , shakespeare
    , text
    , string-conversions
    , directory
    , unordered-containers
    , containers
  extra-libraries: stdc++
  ghc-options:     -Wall

executable codegen-exe
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base
    , codegen
    , optparse-applicative >= 0.14.3.0
  extra-libraries:     stdc++

test-suite doctests
  -- ToDo: Fix doctests
  Buildable: False
  default-language: Haskell2010
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         doctests.hs
  ghc-options:     -Wall -threaded
  build-depends:
      base
    , doctest
    , megaparsec

test-suite spec
  default-language: Haskell2010
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  ghc-options:     -Wall -threaded
  build-depends:   base
                 , codegen
                 , hspec
                 , yaml
                 , safe-exceptions
                 , directory
                 , megaparsec

