name:                hasktorch-codegen
version:             0.1.0.0
synopsis:            Torch for tensors and neural networks in Haskell
description:         Code generation tools
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            
build-type:          Simple
cabal-version:       >=1.10

executable codegen-generic
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             RenderGeneric.hs
  other-modules:       CodeGenParse, CodeGenTypes, RenderShared, ConditionalCases
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , text >= 1.2.2.2

executable codegen-concrete
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             RenderConcrete.hs
  other-modules:       CodeGenParse, CodeGenTypes, RenderShared, ConditionalCases
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , text >= 1.2.2.2

executable codegen-managed
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             RenderManaged.hs
  other-modules:       CodeGenParse, CodeGenTypes, RenderShared, ConditionalCases
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , raw-strings-qq >= 1.1
                     , text >= 1.2.2.2

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch


