name:                hasktorch-codegen
version:             0.0.1.0
synopsis:            Torch for tensors and neural networks in Haskell
description:         Code generation tools
homepage:            https://github.com/hasktorch/hasktorch#readme
bug-reports:         https://github.com/hasktorch/hasktorch/issues
license:             BSD3
author:              Austin Huang
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

library
  hs-source-dirs: src
  default-extensions: LambdaCase OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , containers >=0.5.7
    , hashable >=1.0.1.1
    , megaparsec >=5.3
    , pretty-show >=1.6.13
    , text >=1.2.2.2
    , unordered-containers >=0.1.3.0
  exposed-modules:
      CodeGen.Types
      CodeGen.Types.CLI
      CodeGen.Types.HsOutput
      CodeGen.Types.Parsed

      CodeGen.Prelude
      CodeGen.Render.C
      CodeGen.Render.Function
      CodeGen.Render.Haskell
      CodeGen.FileMappings
      CodeGenParse
      ConditionalCases
      RenderShared
  other-modules:
      Paths_hasktorch_codegen
  default-language: Haskell2010

executable ht-codegen
  default-language: Haskell2010
  hs-source-dirs: exe
  default-extensions: LambdaCase OverloadedStrings
  main-is: Main.hs
  other-modules: CLIOptions
  build-depends:
      base >=4.7 && <5
    , containers >=0.5.7
    , hashable >=1.0.1.1
    , hasktorch-codegen
    , megaparsec >=5.3
    , pretty-show >=1.6.13
    , text >=1.2.2.2
    , unordered-containers >=0.1.3.0
    -- not sure which version yet:
    , optparse-applicative

executable aten-process-spec
  main-is: ProcessSpec.hs
  hs-source-dirs:
      exe/aten
  default-extensions: LambdaCase OverloadedStrings
  build-depends:
      aeson >=1.1
    , aeson-pretty >=0.8.5
    , base >=4.7 && <5
    , bytestring >=0.10.8
    , containers >=0.5.7
    , hashable >=1.0.1.1
    , megaparsec >=5.3
    , pretty-show >=1.6.13
    , singletons >=2.2
    , text >=1.2.2.2
    , unordered-containers >=0.1.3.0
    , yaml >=0.8.25
  other-modules:
      Paths_hasktorch_codegen
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      tests
  default-extensions: LambdaCase OverloadedStrings
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , containers >=0.5.7
    , hashable >=1.0.1.1
    , hasktorch-codegen
    , hspec
    , megaparsec >=5.3
    , pretty-show >=1.6.13
    , text >=1.2.2.2
    , unordered-containers >=0.1.3.0
  other-modules:
      CodeGenParseSpec
      Paths_hasktorch_codegen
  default-language: Haskell2010
