name:                torch-codegen
version:             0.1.0.0
synopsis:            Torch for tensors and dynamic neural networks in Haskell
description:         Code generation tools
homepage:            https://github.com/austinvhuang/hasktorch#readme
license:             BSD3
author:              Austin Huang
maintainer:          
copyright:           
category:            
build-type:          Simple
cabal-version:       >=1.10

executable codegen-generic
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             RenderGeneric.hs
  other-modules:       CodeGenParse, CodeGenTypes, RenderShared, ConditionalCases
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , text >= 1.2.2.2

executable codegen-concrete
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             RenderConcrete.hs
  other-modules:       CodeGenParse, CodeGenTypes, RenderShared, ConditionalCases
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , text >= 1.2.2.2

executable specdb
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             SpecDB.hs
  other-modules:       CodeGenTypes
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3
                     , megaparsec >= 6.1.1
                     , pretty-show >= 1.6.13
                     , sqlite-simple >= 0.4.14.0
                     , text >= 1.2.2.2

source-repository head
  type:     git
  location: https://github.com/austinvhuang/hasktorch

  