name:           hasktorch-core
version:        0.0.1.0
synopsis:       Torch for tensors and neural networks in Haskell
description:    core tensor abstractions wrapping raw TH bindings
category:       Tensors, Machine Learning
homepage:       https://github.com/hasktorch/hasktorch#readme
bug-reports:    https://github.com/hasktorch/hasktorch/issues
author:         Austin Huang
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/hasktorch/hasktorch

flag cuda
  Description: build with THC support
  Default: True

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: LambdaCase, DataKinds, TypeFamilies
  build-depends:
      base >=4.7 && <5
    , containers
    , deepseq >=1.3.0.0
    , dimensions >=0.3.2.0
    , hasktorch-classes
    , hasktorch-dimensions
    , hasktorch-indef-unsigned
    -- , hasktorch-indef-signed
    -- , hasktorch-indef-floating
    , hasktorch-raw-th
    , hasktorch-types-th
    , managed >=1.0.0 && <1.1
    , microlens >=0.4.8.1
    , numeric-limits
    , safe-exceptions >=0.1.0.0
    , singletons >=2.2
    , text >=1.2.2.2
    , typelits-witnesses >=0.2.3.0
  if flag(cuda)
    build-depends:
        hasktorch-types-thc
      , hasktorch-raw-thc
    cpp-options: -DCUDA


  exposed-modules:
    -- support modules

      Torch.Core.Exceptions
    -- , Torch.Core.Random
    -- , Torch.Core.LogAdd

    -- CPU modules
    , Torch
    , Torch.Storage
    , Torch.Dynamic

    -- CPU modules
    , Torch.Cuda
    , Torch.Cuda.Storage
    , Torch.Cuda.Dynamic

  other-modules:
      Torch.Internal

  reexported-modules:
      Torch.Dimensions

    , Torch.Byte.Storage
    , Torch.Byte.Dynamic
    , Torch.Byte.Static

    , Torch.Char.Storage
    , Torch.Char.Dynamic
    , Torch.Char.Static

    , Torch.Cuda.Byte.Storage
    , Torch.Cuda.Byte.Dynamic
    , Torch.Cuda.Byte.Static

    , Torch.Cuda.Char.Storage
    , Torch.Cuda.Char.Dynamic
    , Torch.Cuda.Char.Static

  mixins:
      hasktorch-indef-unsigned
        (Torch.Indef.Storage              as Torch.Byte.Storage
        ,Torch.Indef.Dynamic              as Torch.Byte.Dynamic
        ,Torch.Indef.Static               as Torch.Byte.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Byte
        ,Torch.Sig.Storage        as Torch.FFI.TH.Byte.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Byte.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Byte.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Byte.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Byte.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Byte.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Byte.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Byte.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Byte.TensorRandom

        -- * Used to be available in TH
        -- ,Torch.Sig.Tensor.Conv   as Torch.FFI.TH.Byte.TensorConv
        )
    , hasktorch-indef-unsigned
        (Torch.Indef.Storage              as Torch.Char.Storage
        ,Torch.Indef.Dynamic              as Torch.Char.Dynamic
        ,Torch.Indef.Static               as Torch.Char.Static
        )
        requires
        (Torch.Sig.State          as Torch.Types.TH
        ,Torch.Sig.Types.Global   as Torch.Types.TH
        ,Torch.Sig.Types          as Torch.Types.TH.Char
        ,Torch.Sig.Storage        as Torch.FFI.TH.Char.Storage
        ,Torch.Sig.Storage.Copy   as Torch.FFI.TH.Char.StorageCopy
        ,Torch.Sig.Storage.Memory as Torch.FFI.TH.Char.FreeStorage
        ,Torch.Sig.Tensor         as Torch.FFI.TH.Char.Tensor
        ,Torch.Sig.Tensor.Copy    as Torch.FFI.TH.Char.TensorCopy
        ,Torch.Sig.Tensor.Memory  as Torch.FFI.TH.Char.FreeTensor
        ,Torch.Sig.Tensor.Index   as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Masked  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math           as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.TH.Char.TensorMath
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.TH.Char.TensorMath
        -- ,Torch.Sig.Tensor.Random        as Torch.FFI.TH.Char.TensorRandom
        )

  if flag(cuda)
    mixins:
       hasktorch-indef-unsigned
        (Torch.Indef.Storage              as Torch.Cuda.Byte.Storage
        ,Torch.Indef.Dynamic              as Torch.Cuda.Byte.Dynamic
        ,Torch.Indef.Static               as Torch.Cuda.Byte.Static
        )
        requires
        (Torch.Sig.Types.Global      as Torch.Types.THC
        ,Torch.Sig.Types             as Torch.Types.THC.Byte
        ,Torch.Sig.State             as Torch.FFI.THC.State
        ,Torch.Sig.Storage           as Torch.FFI.THC.Byte.Storage
        ,Torch.Sig.Storage.Copy      as Torch.FFI.THC.Byte.StorageCopy
        ,Torch.Sig.Storage.Memory    as Torch.FFI.THC.Byte.Storage
        ,Torch.Sig.Tensor            as Torch.FFI.THC.Byte.Tensor
        ,Torch.Sig.Tensor.Copy       as Torch.FFI.THC.Byte.TensorCopy
        ,Torch.Sig.Tensor.Memory     as Torch.FFI.THC.Byte.Tensor

        ,Torch.Sig.Tensor.Index          as Torch.FFI.THC.Byte.TensorIndex
        ,Torch.Sig.Tensor.Masked         as Torch.FFI.THC.Byte.TensorMasked
        ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Byte.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Byte.TensorMathCompare
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Byte.TensorMathCompareT
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Byte.TensorMathPairwise
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Byte.TensorMathPointwise
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Byte.TensorMathReduce
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Byte.TensorMathScan
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Byte.TensorMode
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Byte.TensorScatterGather
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Byte.TensorSort
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Byte.TensorTopK
        )

     , hasktorch-indef-unsigned
        (Torch.Indef.Storage              as Torch.Cuda.Char.Storage
        ,Torch.Indef.Dynamic              as Torch.Cuda.Char.Dynamic
        ,Torch.Indef.Static               as Torch.Cuda.Char.Static
        )
        requires
        (Torch.Sig.Types.Global      as Torch.Types.THC
        ,Torch.Sig.Types             as Torch.Types.THC.Char
        ,Torch.Sig.State             as Torch.FFI.THC.State
        ,Torch.Sig.Storage           as Torch.FFI.THC.Char.Storage
        ,Torch.Sig.Storage.Copy      as Torch.FFI.THC.Char.StorageCopy
        ,Torch.Sig.Storage.Memory    as Torch.FFI.THC.Char.Storage
        ,Torch.Sig.Tensor            as Torch.FFI.THC.Char.Tensor
        ,Torch.Sig.Tensor.Copy       as Torch.FFI.THC.Char.TensorCopy
        ,Torch.Sig.Tensor.Memory     as Torch.FFI.THC.Char.Tensor

        ,Torch.Sig.Tensor.Index          as Torch.FFI.THC.Char.TensorIndex
        ,Torch.Sig.Tensor.Masked         as Torch.FFI.THC.Char.TensorMasked
        ,Torch.Sig.Tensor.Math           as Torch.FFI.THC.Char.TensorMath
        ,Torch.Sig.Tensor.Math.Compare   as Torch.FFI.THC.Char.TensorMathCompare
        ,Torch.Sig.Tensor.Math.CompareT  as Torch.FFI.THC.Char.TensorMathCompareT
        ,Torch.Sig.Tensor.Math.Pairwise  as Torch.FFI.THC.Char.TensorMathPairwise
        ,Torch.Sig.Tensor.Math.Pointwise as Torch.FFI.THC.Char.TensorMathPointwise
        ,Torch.Sig.Tensor.Math.Reduce    as Torch.FFI.THC.Char.TensorMathReduce
        ,Torch.Sig.Tensor.Math.Scan      as Torch.FFI.THC.Char.TensorMathScan
        ,Torch.Sig.Tensor.Mode           as Torch.FFI.THC.Char.TensorMode
        ,Torch.Sig.Tensor.ScatterGather  as Torch.FFI.THC.Char.TensorScatterGather
        ,Torch.Sig.Tensor.Sort           as Torch.FFI.THC.Char.TensorSort
        ,Torch.Sig.Tensor.TopK           as Torch.FFI.THC.Char.TensorTopK
        )

